@@ -3,6 +3,7 @@ FOF 3.5.2
 + Blade: bust OPcode cache when writing a compiled template file [gh-687]
 + Blade: do not cache compiled files when Debug Site is set to Yes, forcing recompilation during site development
 + Platform abstraction for setting / getting script parameters
+~ Alternate class inclusion for JHtml helpers to work around Joomla bugs [admintools/222]
 # [HIGH] Template overrides for module and plugin view templates would not work
 # [HIGH] View templates were always loaded from this side of the application, ignoring 'site:' and 'admin:' prefixes
 # [LOW] Blade compiler would still refuse to execute when the PHP Tokenizer extension is disabled
